nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  annotations:
    linkerd.io/inject: enabled
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
